# $Id$

2007-08-09	Dmitry A. Lomash

	* main/Utils/CodeGenerator.class.php: setCharactersAllowed() method 
	was added.

2007-08-08	Vladimir A. Altuchov

	* core/Form/Filters/: + lower case filter

2007-08-06	Ivan Y. Khvostishkov

	* main/Utils/IO/: File Streams accept both string names and resource
	descriptors in constructor.

2007-08-06	Konstantin V. Arkhipov

	* meta/: per-class fetch strategy implemented.

2007-08-05	Denis M. Gabaidulin

	* main/Base/ImageType.class.php: getExtension() helper method was added.

2007-07-30	Ivan Y. Khvostishkov

	* main/Utils/Html: HtmlTokenizer arrived from incubator.

	* main/Utils/GenericUri.class.php: rfc3986 uri implementation.

2007-07-27	Anton E. Lebedevich

	* main/Utils/ClassUtils.class.php: abstract class support added
	to isInstanceOf.

2007-07-23	Ivan Y. Khvostishkov

	* global.inc.php.tpl: possible security hole fixed on autoload's
	level.

2007-07-16	Konstantin V. Arkhipov

	* main/Base/RequestType.class.php,
	main/Criteria/FetchStrategy.class.php: immutable now.

2007-07-15	Konstantin V. Arkhipov

	* core/OSQL/DBField.class.php, core/OSQL/SelectField.class.php,
	core/Form/Primitives/ListedPrimitive.class.php: implemented in module.

	* core/OSQL/Castable.class.php: DialectString is a must now.

2007-07-13	Konstantin V. Arkhipov

	* core/OSQL/DatePart.class.php, core/OSQL/ExtractPart.class.php: ANSI
	SQL's EXTRACT() implemented.

2007-07-10	Ivan Y. Khvostishkov

	* main/Utils/IO/FileOutputStream.class.php: implemented.

	* main/Utils/Logging/: simple but useful classes for logging.

2007-07-10	Dmitry E. Pismenny

	* main/Utils/TextUtils.class.php: cutOnSpace now return string, which 
	cutted to needfull length, if there is no space after length.

2007-07-09	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now ignores null values.

2007-07-07	Konstantin V. Arkhipov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: resolveViewName now
	throws WrongArgumentException.

2007-07-06	Dmitry E. Pismenny
