@@ -86,6 +86,7 @@
 		 */
 		public function send(HttpRequest $request)
 		{
+			// TODO: support more methods
 			Assert::isTrue($request->getMethod()->getId() == HttpMethod::GET);
 			
 			$response = CurlHttpResponse::create();
@@ -93,7 +94,7 @@
 			$options = array(
 				CURLOPT_WRITEFUNCTION => array($response, 'writeBody'),
 				CURLOPT_HEADERFUNCTION => array($response, 'writeHeader'),
-				CURLOPT_URL => $request->getUri()->toString()
+				CURLOPT_URL => $request->getUrl()->toString()
 			);
 			
 			if ($this->timeout !== null)
