@@ -1,5 +1,10 @@
 # $Id$
 
+2007-08-09	Anton E. Lebedevich
+
+	* main/Flow/HttpRequest.class, main/Net/Http/CurlHttpClient.class.php:
+	HttpRequest uri -> url.
+
 2007-08-09	Dmitry A. Lomash
 
 	* main/Utils/CodeGenerator.class.php: setCharactersAllowed() method 
